# RepoGuard

./: .env.example  .gitignore  README.md  ReNewPlan.md
.claude/hooks/.logs/: hook-log.jsonl
.codex/: config.toml  hooks.json
.codex/hooks/.logs/: hook-log.jsonl
malguard/: __init__.py  __main__.py  benchmark.py  cli.py  models.py  scanner.py
malguard/dashboard/: __init__.py  benchmark_app.py
malguard/rules/: __init__.py  ast_rules.py
pdf-kb-project/: .gitignore  Makefile  README.md  docker-compose.yml
pdf-kb-project/backend/: pyproject.toml
pdf-kb-project/backend/app/: __init__.py  constants.py  database.py  ingestion.py  main.py  models.py  openai_service.py  retrieval.py  schemas.py  settings.py  storage.py
pdf-kb-project/backend/migrations/: 001_init_pgvector.sql
pdf-kb-project/backend/tests/: conftest.py  fakes.py  pdf_helpers.py  test_chat.py  test_ingestion.py  test_retrieval.py
pdf-kb-project/frontend/: package-lock.json  package.json  tsconfig.json
process/context/: all-context.md
process/context/planning/: all-planning.md
process/context/tests/: all-tests.md
repoguard/: README.md  __init__.py  __main__.py  agent.py  benchmark.py  cli.py  codegraph_client.py  config.py  graph_exporter.py  models.py  patcher.py  repo_context.py  report.py  scanner.py  verifier.py  workflow.py
repoguard/dashboard/: __init__.py  benchmark_app.py
repoguard/rules/: __init__.py  common.py  dead_code_rules.py  graph_rules.py  malware_rules.py  security_rules.py
tests/: e2e_manifest.json  repoguard_manifest.json
tests/corpus/benign/: env_read_local.py  (+13 more)
(+44 files in other folders)
