[project]
name = "pdf-kb-backend"
version = "0.1.0"
description = "FastAPI backend for PDF RAG knowledge base"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "SQLAlchemy>=2.0",
  "psycopg[binary]>=3.1",
  "httpx>=0.27",
  "PyMuPDF>=1.24",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
